# seekpath

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .prospector.yaml  .pylintrc  .readthedocs.yml  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  README.rst  TODO.txt  create_data.py  kpaths.py  open_source_licenses.txt  optional-requirements.txt  pyproject.toml  requirements.txt  run_tests.py  setup.py  spg_mapping.py  spgnames.json  test_aiida_conversion.py  test_aiida_wrappers.py  test_path.py
.docker_files/: apache_run.sh  create_secret_key.sh  seekpath-apache.conf
.github/workflows/: ci.yml
.pipdockercache/: README.txt
api/: .gitignore  run_api.py  run_server.py
api/templates/: basic_visualizer.html  structure_visualizer.html  visualizer.html  visualizer_select.html
api/view/: index.html  process_structure.html  structure_visualizer.html
band_data/mC3/: k_vector_parameter.txt
band_data_test/mC3/: points.txt
docs/: Makefile  requirements_for_rtd.txt
docs/source/: conf.py  index.rst  maindoc.rst
documents/: 2D and 3D voronoi.ipynb
kpaths3d/: __init__.py  aiidawrappers.py  test_paths.py  test_paths_hkot.py  test_paths_hpkot.py
kpaths3d/hkot/: __init__.py  spg_db.py  spg_mapping.py  tools.py
kpaths3d/hpkot/: __init__.py  spg_mapping.py  tools.py
misc/: coverage  kpaths3d  run_path_example.py  seekpath  settings_spacegroups_for_cod.py  tcod_spgrp_from_dbquery.json
misc/alternate_poscars/: oi3_noinv.POSCAR
misc/documents/: selection of spacegroups for first test.txt
misc/full_2016_03/: band_path_for_aiida.tgz
misc/old_spgdb/: spg_db.py  spg_mapping.py
seekpath/: __init__.py  aiidawrappers.py  getpaths.py  test_paths_hpkot.py  util.py
seekpath/brillouinzone/: brillouinzone.py  test_brillouinzone.py
seekpath/hpkot/: __init__.py  spg_db.py  spg_mapping.py  test_get_primitive.py  tools.py
static_js_visualizer/: visualizer.html
static_js_visualizer/css/: visualizer.css
static_js_visualizer/data/: aP3_inv.json  cF1_inv.json  cF2_inv.json  cF2_noinv.json  cI1_noinv.json  cP1_inv.json  cP2_noinv.json  hP2_inv.json  hP2_noinv.json  hR2_noinv.json  mC2_noinv.json  oA2_noinv.json  oC1_inv.json  oC1_noinv.json  oF2_noinv.json  oI1_noinv.json  oI2_inv.json  oI2_noinv.json  oI3_noinv.json  oP1_noinv.json  tI1_inv.json  tI2_inv.json  tI2_noinv.json  tP1_inv.json  tP1_noinv.json
tests/: test_brillouinzone.py  test_hpkot_get_primitive.py  test_paths_hpkot.py
visualizer/: visualizer.html
visualizer/data/: aP2_inv.json  aP2_noinv.json  aP3_inv.json  aP3_noinv.json  cF1_inv.json  cF1_noinv.json  cF2_inv.json  cF2_noinv.json  cI1_inv.json  cI1_noinv.json  cP1_inv.json  cP1_noinv.json  cP2_inv.json  cP2_noinv.json  hP1_inv.json  hP1_noinv.json  hP2_inv.json  hP2_noinv.json  hR1_inv.json  (+36 more)
webservice/: .gitignore  README_DEPLOY.md  README_DEPLOY.txt  create_wsgi.py  seekpath_app.py  seekpath_app_test.py  seekpath_web_module.py  test_structure.py
website/: .gitignore  README_INSTALL.txt  brillouinzone  create_wsgi.py  kpath_app.py  requirements.txt  seek_app.py  seekpath_app.py  server_app.py
(+418 files in other folders)
