[build-system]
build-backend = 'flit_core.buildapi'
requires = ['flit_core >=3.4,<4']

[project]
name = "seekpath"
dynamic = ['version']
description = "A module to obtain and visualize k-vector coefficients and obtain band paths in the Brillouin zone of crystal structures"
keywords = ["path", "band structure", "Brillouin", "crystallography", "physics", "primitive cell", "conventional cell"]
readme = "README.md"
authors = [
    {name = "Giovanni Pizzi"},
]
maintainers = [
    {name = "Timo Reents"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.0",
    "spglib>=1.14.1",
]
license = {text = "The MIT license"}

[project.urls]
Homepage = "http://github.com/giovannipizzi/seekpath"
Downloads = "https://github.com/giovannipizzi/seekpath/archive/v2.1.1.tar.gz"

[project.optional-dependencies]
bz = [
    "scipy>=1",
]
dev = [
    "black==23.3.0",
    "pre-commit~=3.5",
    "prospector==1.11.0",
    "pytest==7.3.1",
]

[tool.ruff.format]
quote-style = 'single'
